# rust-trezor-crypto

./: .gitmodules  Cargo.toml  README.md  build.rs  crates.js  search-index.js  settings.html  source-files.js  wrapper.h
.cargo/: config
.github/workflows/: ci.yml
benches/: compare.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js
implementors/core/convert/: trait.From.js  trait.TryFrom.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: consts.rs  curve25519.rs  ed25519.rs  ffi.rs  lib.rs  test.rs
src/ed25519/: cosi.rs  keccak.rs  mod.rs  sha3.rs
src/ge/: mod.rs
src/hashes/: keccak.rs  mod.rs  sha3.rs
src/modm/: mod.rs
src/trezor_crypto_lib/: ffi.rs.html  lib.rs.html  test.rs.html
src/trezor_crypto_lib/ed25519/: keccak.rs.html  mod.rs.html  sha3.rs.html
src/trezor_crypto_lib/ge/: mod.rs.html
src/trezor_crypto_lib/modm/: mod.rs.html
tests/: compat.rs  ed25519-keccak.c  ed25519-keccak.rs  ed25519-sha3.c  ed25519.rs  ed25519_cosi.rs  ed25519_keccak.rs  ed25519_sha3.rs  extensions.c  keccak.c
trezor_crypto_lib/: all.html  index.html  sidebar-items.js  type.Int.html  type.UInt.html
trezor_crypto_lib/ed25519/: fn.dalek_curve25519_scalarmult.html  fn.dalek_curved25519_scalarmult_basepoint.html  fn.dalek_ed25519_publickey.html  fn.dalek_ed25519_publickey_ext.html  fn.dalek_ed25519_randombytes_unsafe.html  fn.dalek_ed25519_sign.html  fn.dalek_ed25519_sign_ext.html  fn.dalek_ed25519_sign_open.html  fn.dalek_ed25519_sign_open_batch.html  index.html  sidebar-items.js  type.PublicKey.html  type.Scalar.html  type.SecretKey.html  type.Signature.html
trezor_crypto_lib/ed25519/consts/: constant.PUBLIC_KEY_LENGTH.html  constant.SCALAR_LENGTH.html  constant.SECRET_KEY_LENGTH.html  constant.SIGNATURE_LENGTH.html  index.html  sidebar-items.js
trezor_crypto_lib/ed25519/keccak/: fn.dalek_ed25519_publickey_keccak.html  fn.dalek_ed25519_sign_keccak.html  fn.dalek_ed25519_sign_open_keccak.html  index.html  sidebar-items.js
trezor_crypto_lib/ed25519/sha3/: fn.dalek_ed25519_publickey_sha3.html  fn.dalek_ed25519_sign_open_sha3.html  fn.dalek_ed25519_sign_sha3.html  index.html  sidebar-items.js
trezor_crypto_lib/ffi/: fn.curve25519_donna.html  fn.curve25519_donna_basepoint.html  fn.curve25519_scalarmult.html  fn.curved25519_scalarmult_basepoint.html  fn.ed25519_publickey.html  fn.ed25519_publickey_ext.html  fn.ed25519_publickey_keccak.html  fn.ed25519_publickey_sha3.html  fn.ed25519_randombytes_unsafe.html  fn.ed25519_scalarmult_keccak.html  fn.ed25519_scalarmult_sha3.html  fn.ed25519_sign.html  fn.ed25519_sign_ext.html  fn.ed25519_sign_keccak.html  fn.ed25519_sign_open.html  fn.ed25519_sign_open_batch.html  fn.ed25519_sign_open_keccak.html  fn.ed25519_sign_open_sha3.html  fn.ed25519_sign_sha3.html  index.html  sidebar-items.js  struct.ge25519_niels_t.html  struct.ge25519_p1p1_t.html  struct.ge25519_pniels_t.html  struct.ge25519_t.html  type.PublicKey.html  type.SecretKey.html  type.Signature.html  type.__uint32_t.html  type.__uint8_t.html  type.bignum25519.html  type.bignum25519align16.html  type.bignum256modm.html  type.bignum256modm_element_t.html  type.curve25519_key.html  type.curved25519_key.html  type.ed25519_public_key.html  type.ed25519_secret_key.html  type.ed25519_signature.html  type.ge25519.html  (+4 more)
trezor_crypto_lib/ge/: fn.ed25519_verify.html  fn.ge25519_add.html  fn.ge25519_check.html  fn.ge25519_copy.html  fn.ge25519_double.html  fn.ge25519_double_scalarmult_vartime.html  fn.ge25519_double_scalarmult_vartime2.html  fn.ge25519_eq.html  fn.ge25519_fromfe_frombytes_vartime.html  fn.ge25519_mul8.html  fn.ge25519_pack.html  fn.ge25519_scalarmult.html  fn.ge25519_scalarmult_base_wrapper.html  fn.ge25519_set_neutral.html  fn.ge25519_unpack_vartime.html  index.html  sidebar-items.js  struct.Ge25519.html
trezor_crypto_lib/modm/: fn.add256_modm.html  fn.check256_modm.html  fn.contract256_modm.html  fn.copy256_modm.html  fn.eq256_modm.html  fn.expand256_modm.html  fn.expand_raw256_modm.html  fn.get256_modm.html  fn.iszero256_modm.html  fn.mul256_modm.html  fn.muladd256_modm.html  fn.mulsub256_modm.html  fn.set256_modm.html  fn.sub256_modm.html  index.html  sidebar-items.js  type.Bignum25519.html  type.Bignum256Modm.html
trezor_crypto_lib/test/: constant.DALEK.html  constant.DONNA.html  index.html  sidebar-items.js  struct.Batch.html  struct.Driver.html
