[package]
name = "trezor-crypto-lib"
description = "A rust implementation of the trezor crypto library"
repository = "https://github.com/ryankurte/rust-trezor-crypto"
categories = [ "cryptography", "no-std" ]
keywords = [ "cryptography", "crypto", "donna", "dalek", "ed25519" ]
version = "0.1.1"
edition = "2021"
readme = "README.md"
license = "BSD-3-Clause"

# NOTE: [lib] declaration seemingly required to ensure exports are not --gc-sections'd when compiled for external linking
[lib]

[features]
std = [ ]
u32_backend = [ "ed25519-dalek/u32_backend", "curve25519-dalek/u32_backend", "x25519-dalek/u32_backend" ]
build_donna = []

default = [ "std", "u32_backend", "build_donna" ]

[dependencies]
cty = "0.2.2"
getrandom = { version = "0.2.6", default_features = false }
static_assertions = "1.1.0"

curve25519-dalek = { version = "3.2.1", default_features = false }
ed25519-dalek = { version = "1.0.1", default_features = false }
x25519-dalek = { version = "1.2.0", default_features = false }

sha2 = { version = "0.9.9", default_features = false }
sha3 = { version = "0.9.1", default_features = false }

[build-dependencies]
bindgen = "0.59.2"
anyhow = "1.0.57"
cc = "1.0.73"
glob = "0.3.0"

[dev-dependencies]
base64 = "0.13.0"
hex = "0.4.3"
libc = "0.2.126"

# NOTE: old rand-core required for dalek crates
rand_core = { version = "0.5.1", features = [ "std" ] }

[patch.crates-io]

# See https://github.com/dalek-cryptography/ed25519-dalek/pull/201
#ed25519-dalek = { path = "../ed25519-dalek" }
ed25519-dalek = { git = "https://github.com/ryankurte/ed25519-dalek", branch="feature/generic-digests" }

