[package]
name = "trezor-crypto-lib"
description = "A rust implementation of the trezor crypto library"
repository = "https://github.com/ryankurte/rust-trezor-crypto"
categories = [ "cryptography", "no-std" ]
keywords = [ "cryptography", "crypto", "donna", "dalek", "ed25519" ]
version = "0.2.0"
edition = "2021"
readme = "README.md"
license = "BSD-3-Clause"

# NOTE: [lib] declaration seemingly required to ensure exports are not --gc-sections'd when compiled for external linking
[lib]

[features]
std = [ "rand_core/std" ]
build_donna = []
test_helpers = [ "rand_core", "rand_core/std" ]
default = [ "std", "build_donna", "test_helpers" ]

[dependencies]
cty = "0.2.2"
getrandom = { version = "0.2.7", default_features = false }
rand_core = { version = "0.5.1", default_features = false, optional = true }

static_assertions = "1.1.0"

sha2 = { version = "0.9.9", default_features = false }
sha3 = { version = "0.9.1", default_features = false }
byteorder = { version = "1.4.3", default_features = false }
subtle = { version = "2.4.1", default_features = false }
heapless = "0.7.14"
mem_macros = "1.0.1"
hex = { version = "0.4.3", optional = true }

[dependencies.curve25519-dalek]
version = "3.2.0"
features = [ "u32_backend", "yolo_crypto" ]
default_features = false

[dependencies.ed25519-dalek]
version = "1.0.1"
features = [ "u32_backend", "yolo_crypto" ]
default_features = false


[build-dependencies]
bindgen = "0.59.2"
anyhow = "1.0.57"
cc = "1.0.73"
glob = "0.3.0"

[dev-dependencies]
base64 = "0.13.0"
hex = "0.4.3"
libc = "0.2.126"

# NOTE: old rand-core required for dalek crates
rand_core = { version = "0.5.1", features = [ "std" ] }

ed25519-donna-sys = { path = "./deps/ed25519-donna-sys" }
ed25519-donna-keccak-sys = { path = "./deps/ed25519-donna-keccak-sys" }
ed25519-donna-sha3-sys = { path = "./deps/ed25519-donna-sha3-sys" }

[patch.crates-io]

# See https://github.com/ryankurte/curve25519-dalek/pull/1

#curve25519-dalek = { path = "../curve25519-dalek" }
curve25519-dalek = { git = "https://github.com/ryankurte/curve25519-dalek", branch="point-construction-hacks" }

# See https://github.com/dalek-cryptography/ed25519-dalek/pull/201

#ed25519-dalek = { path = "../ed25519-dalek" }
ed25519-dalek = { git = "https://github.com/ryankurte/ed25519-dalek", branch="feature/generic-digests" }

